# collector

./: .gitmodules  CMakeLists.txt  README.md
include/: collector.hxx  database.hxx  hashsum.hxx
include/collector/: collector.hxx  config.hxx  database.hxx
sources/: collector.cxx  collector.hxx  config.hxx  database.cxx  database.hxx  file.cxx  file.hxx  hashsum.cxx  main.cxx
